bin_PROGRAMS = rogue
rogue_SOURCES = armor.c chase.c command.c daemon.c daemons.c extern.c fight.c init.c io.c list.c mach_dep.c main.c mdport.c misc.c monsters.c move.c new_level.c options.c pack.c passages.c potions.c rings.c rip.c rooms.c save.c scrolls.c state.c sticks.c things.c vers.c weapons.c wizard.c xcrypt.c
CFLAGS = -O2
